--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -1,435 +1,129 @@
 @font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: 900;
-	src: url('./../fonts/iransans/eot/IRANSansWeb_Black.eot');
-	src: url('./../fonts/iransans/eot/IRANSansWeb_Black.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('./../fonts/iransans/woff2/IRANSansWeb_Black.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('./../fonts/iransans/woff/IRANSansWeb_Black.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('./../fonts/iransans/ttf/IRANSansWeb_Black.ttf') format('truetype');
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: 900;
+  src: url('./../fonts/iransans/eot/IRANSansWeb_Black.eot');
+  src: url('./../fonts/iransans/eot/IRANSansWeb_Black.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-8 */ url('./../fonts/iransans/woff2/IRANSansWeb_Black.woff2')
+      format('woff2'),
+    /* FF39+,Chrome36+, Opera24+*/
+      url('./../fonts/iransans/woff/IRANSansWeb_Black.woff') format('woff'),
+    /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+      url('./../fonts/iransans/ttf/IRANSansWeb_Black.ttf') format('truetype');
 }
 @font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: bold;
-	src: url('./../fonts/iransans/eot/IRANSansWeb_Bold.eot');
-	src: url('./../fonts/iransans/eot/IRANSansWeb_Bold.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('./../fonts/iransans/woff2/IRANSansWeb_Bold.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('./../fonts/iransans/woff/IRANSansWeb_Bold.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('./../fonts/iransans/ttf/IRANSansWeb_Bold.ttf') format('truetype');
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: bold;
+  src: url('./../fonts/iransans/eot/IRANSansWeb_Bold.eot');
+  src: url('./../fonts/iransans/eot/IRANSansWeb_Bold.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-8 */ url('./../fonts/iransans/woff2/IRANSansWeb_Bold.woff2')
+      format('woff2'),
+    /* FF39+,Chrome36+, Opera24+*/
+      url('./../fonts/iransans/woff/IRANSansWeb_Bold.woff') format('woff'),
+    /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+      url('./../fonts/iransans/ttf/IRANSansWeb_Bold.ttf') format('truetype');
 }
 @font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: 500;
-	src: url('./../fonts/iransans/eot/IRANSansWeb_Medium.eot');
-	src: url('./../fonts/iransans/eot/IRANSansWeb_Medium.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('./../fonts/iransans/woff2/IRANSansWeb_Medium.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('./../fonts/iransans/woff/IRANSansWeb_Medium.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('./../fonts/iransans/ttf/IRANSansWeb_Medium.ttf') format('truetype');
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: 500;
+  src: url('./../fonts/iransans/eot/IRANSansWeb_Medium.eot');
+  src: url('./../fonts/iransans/eot/IRANSansWeb_Medium.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-8 */ url('./../fonts/iransans/woff2/IRANSansWeb_Medium.woff2')
+      format('woff2'),
+    /* FF39+,Chrome36+, Opera24+*/
+      url('./../fonts/iransans/woff/IRANSansWeb_Medium.woff') format('woff'),
+    /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+      url('./../fonts/iransans/ttf/IRANSansWeb_Medium.ttf') format('truetype');
 }
 @font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: 300;
-	src: url('./../fonts/iransans/eot/IRANSansWeb_Light.eot');
-	src: url('./../fonts/iransans/eot/IRANSansWeb_Light.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('./../fonts/iransans/woff2/IRANSansWeb_Light.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('./../fonts/iransans/woff/IRANSansWeb_Light.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('./../fonts/iransans/ttf/IRANSansWeb_Light.ttf') format('truetype');
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: 300;
+  src: url('./../fonts/iransans/eot/IRANSansWeb_Light.eot');
+  src: url('./../fonts/iransans/eot/IRANSansWeb_Light.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-8 */ url('./../fonts/iransans/woff2/IRANSansWeb_Light.woff2')
+      format('woff2'),
+    /* FF39+,Chrome36+, Opera24+*/
+      url('./../fonts/iransans/woff/IRANSansWeb_Light.woff') format('woff'),
+    /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+      url('./../fonts/iransans/ttf/IRANSansWeb_Light.ttf') format('truetype');
 }
 @font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: 200;
-	src: url('./../fonts/iransans/eot/IRANSansWeb_UltraLight.eot');
-	src: url('./../fonts/iransans/eot/IRANSansWeb_UltraLight.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('./../fonts/iransans/woff2/IRANSansWeb_UltraLight.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('./../fonts/iransans/woff/IRANSansWeb_UltraLight.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('./../fonts/iransans/ttf/IRANSansWeb_UltraLight.ttf') format('truetype');
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: 200;
+  src: url('./../fonts/iransans/eot/IRANSansWeb_UltraLight.eot');
+  src: url('./../fonts/iransans/eot/IRANSansWeb_UltraLight.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-8 */ url('./../fonts/iransans/woff2/IRANSansWeb_UltraLight.woff2')
+      format('woff2'),
+    /* FF39+,Chrome36+, Opera24+*/
+      url('./../fonts/iransans/woff/IRANSansWeb_UltraLight.woff') format('woff'),
+    /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+      url('./../fonts/iransans/ttf/IRANSansWeb_UltraLight.ttf')
+      format('truetype');
 }
 @font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: normal;
-	src: url('./../fonts/iransans/eot/IRANSansWeb.eot');
-	src: url('./../fonts/iransans/eot/IRANSansWeb.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('./../fonts/iransans/woff2/IRANSansWeb.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('./../fonts/iransans/woff/IRANSansWeb.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('./../fonts/iransans/ttf/IRANSansWeb.ttf') format('truetype');
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: normal;
+  src: url('./../fonts/iransans/eot/IRANSansWeb.eot');
+  src: url('./../fonts/iransans/eot/IRANSansWeb.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-8 */ url('./../fonts/iransans/woff2/IRANSansWeb.woff2')
+      format('woff2'),
+    /* FF39+,Chrome36+, Opera24+*/
+      url('./../fonts/iransans/woff/IRANSansWeb.woff') format('woff'),
+    /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+      url('./../fonts/iransans/ttf/IRANSansWeb.ttf') format('truetype');
 }
-
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
-/* Document
-   ========================================================================== */
-
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-
- html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers.
- */
 
 body {
+  direction: rtl;
+  font-family: IRANSans, sans-serif;
   margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Remove the gray background on active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove the border on images inside links in IE 10.
- */
-
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
   padding: 0;
 }
 
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+header {
+  margin: 0;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0 0;
 }
 
-/**
- * Correct the padding in Firefox.
- */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+header img {
+  width: 100px;
   height: auto;
 }
 
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
+.main-content {
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10+.
- */
-
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-
-[hidden] {
-  display: none;
-}
-
-
-html,
-body {
-  direction: rtl;
-	font-family: IRANSans, sans-serif;
-	margin: 0;
-	padding: 0;
-}
-
-header {
-	background: green;
-	margin: 0;
-}
-
-.flex-container {
-	display: flex;
-	flex-direction: row;
+main {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .post-box {
-	background: gray;
-	padding: 10px;
-	margin: 20px;
+  flex-grow: 1;
+  width: 15rem;
+  background: gray;
+  padding: 10px;
+  margin: 10px;
 }
